# game-asset-collector

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/architecture/: 当前架构_CURRENT_STATE.md
docs/product/: 生财有术课程采集_SCYS_COURSE_CAPTURE.md  生财课程采集_SCYS_COURSE_CAPTURE.md  采集器概览_COLLECTOR_OVERVIEW.md
game_asset_collector/: __init__.py  fetch_game_assets.py  reference_pack.py  scys_course.py
scripts/: build_reference_pack.py  fetch_game_assets.py  fetch_scys_course.py
tests/: test_reference_pack.py  test_scys_course.py  test_smoke.py
