[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "game-asset-collector"
version = "0.2.0"
description = "Shared store/video asset collector for PPT Master and Game Review."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0.0",
  "google-play-scraper>=1.2.7",
  "yt-dlp>=2025.0.0",
]

[project.scripts]
game-asset-collector = "game_asset_collector.fetch_game_assets:main"
game-asset-reference-pack = "game_asset_collector.reference_pack:main"
scys-course-capture = "game_asset_collector.scys_course:main"

[tool.setuptools]
packages = ["game_asset_collector"]
